ingress.yaml
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dev-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: yosiagusta.com
      http:
        paths:
          - path: /getusers/*
            backend:
              serviceName: user-svc
              servicePort: 80
          - path: /getsmartbins/*
            backend:
              serviceName: smartbin-svc
              servicePort: 80
